--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,13 +1,18 @@
 name: Update stats
+# This is a basic workflow to help you get started with Actions
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
+  push:
+    branches: [ master ]
   schedule:
     # Runs at 12am UTC
     - cron: '0 0 * * *'
 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
       - uses: athul/waka-readme@master
