--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
       - uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          WAKATIME_API_KEY: ${{ secrets.645fe7fb-8780-4862-bd97-5ea2e83289bc }}
