--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,20 +1,9 @@
-name: Update stats
-# This is a basic workflow to help you get started with Actions
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  schedule:
-    # Runs at 12am UTC
-    - cron: '0 0 * * *'
-
-jobs:
-  update-readme:
-    name: Update this repo's README
-    runs-on: ubuntu-latest
-    steps:
-      - uses: athul/waka-readme@master
-        with:
-          WAKATIME_API_KEY: ${{ 645fe7fb-8780-4862-bd97-5ea2e83289bc }}
+- name: Waka - Readme
+  uses: athul/waka-readme@0.1.2
+  with:
+    # GitHub access token with Repo scope
+    GH_TOKEN: # default is ${{ github.token }}
+    # Your Wakatime API Key
+    WAKATIME_API_KEY: 645fe7fb-8780-4862-bd97-5ea2e83289bc
+    # Your GitHub username
+    USERNAME: Kyomotoi# optional, default is ${{ github.repository_owner }}
