--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
           plugin_wakatime_user: Kyomotoi
-          plugin_wakatime_sections: time, projects, languages, language-graphs, editors, editors-graphs, os
+          plugin_wakatime_sections: time, projects, languages, languages-graphs, editors, editors-graphs, os
           plugin_wakatime_repositories_visibility: public
           
